refactor: simplify css classnames and add plugin for module naming

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsdom": "^24.1.1",
     "prettier": "^3.3.3",
     "vite": "^5.3.4",
+    "vite-plugin-pretty-module-classnames": "^1.2.0",
     "vitest": "^2.0.5"
   }
 }
